# opengl-samples

./: .gitmodules  CMakeLists.txt  README.md
cmake/: imgui_setup.cmake  setup_project.cmake
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/include/khr/: khrplatform.h
lib/glad/src/: glad.c
lib/stb/: CMakeLists.txt
lib/stb/include/: stb_image.h
src/common/include/: camera.h  object_loader.h  pch.h  shader.h  shader.tpp  transform.h  utility.h
src/common/src/: camera.cpp  object_loader.cpp  pch.cpp  shader.cpp  transform.cpp  utility.cpp
src/samples/cube/: CMakeLists.txt
src/samples/particle/: CMakeLists.txt
src/samples/particle/assets/shaders/: particle.frag  particle.vert
src/samples/particle/include/: particle.h
src/samples/particle/src/: main.cpp
src/samples/particles/: CMakeLists.txt  README.md
src/samples/particles/data/: imgui_layout.ini
src/samples/particles/include/: particle.h
src/samples/particles/src/: main.cpp
src/samples/path-tracing/: CMakeLists.txt  README.md
src/samples/path-tracing/assets/shaders/: fsq.frag  fsq.vert  path_tracing.frag  post_processing.frag
src/samples/path-tracing/data/: imgui_layout.ini
src/samples/path-tracing/include/: material.h  model.h  primitives.h  triangle.h
src/samples/path-tracing/src/: main.cpp  material.cpp  model.cpp  primitives.cpp  triangle.cpp
